Fix stretching avatar

--- a/utopian/static/sass/layout/_contributions.scss
+++ b/utopian/static/sass/layout/_contributions.scss
@@ -106,7 +106,14 @@
 .contribution-avatar {
   height: 3rem;
   width: 3rem;
-  border-radius: 100%;
+  border-radius: 50%;
+  overflow: hidden;
+
+  &--image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 .contribution-submitted {
