--- a/utopian/static/style.css
+++ b/utopian/static/style.css
@@ -239,7 +239,12 @@ body {
 .contribution-avatar {
   height: 3rem;
   width: 3rem;
-  border-radius: 100%; }
+  border-radius: 50%;
+  overflow: hidden; }
+  .contribution-avatar--image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
 
 .contribution-submitted {
   cursor: pointer;
